--- a/personal.html
+++ b/personal.html
@@ -27,7 +27,7 @@
 		<img src = "images/wisconsin_dells.jpg" width="25" alt="Wisconsin Dells Sasquatch Lake">
 		<img src = "images/badlands.jpg" width="1000" alt = "Badlands National Park Sign">
 		<img src = "images/falling.jpg" width="25" alt = "Kid hanging on a cliff">
-		<img src = "images/jewel_cave.jpg" width="1000" alt = "Jewel Cave National Monument Sign">
+		<img src = "images/jewel_cave.JPG" width="1000" alt = "Jewel Cave National Monument Sign">
 		<img src = "images/rushmore.jpg" width="25" alt = "Mount Rushmore">
 	</main>
 	<footer>
